<resources>
    <string name="app_name">BI Android</string>
    <string name="action_nav">kek</string>
    <string name="navbar_timetable">Расписание</string>
    <string name="navbar_news">Новости</string>
    <string name="navbar_help">Помощь</string>
    <string name="navbar_announcements">Объявления</string>
    <string name="navbar_studies">Учебный процесс</string>
    <string name="navbar_settings">Настройки</string>
    <string name="navbar_community">Студорганизации</string>
    <string name="tab_scbi">СКБИ</string>
    <string name="tab_events">МЕРОПРИЯТИЯ</string>
    <string name="tab_all">ВСЕ</string>
    <string name="tab_important">ВАЖНЫЕ</string>
    <string name="settings_main">ОСНОВНЫЕ НАСТРОЙКИ</string>
    <string name="tab_courses">КУРСЫ</string>
    <string name="tab_mentors">ПРЕПОДАВАТЕЛИ</string>
    <string name="loading">Загрузка</string>
    <string name="url_community">"https://1fichier.com/?5lis2jxdqb"</string>
    <string name="url_events">https://1fichier.com/?dblr1dqbzm</string>
    <string name="url_news">"https://1fichier.com/?oxyz5t6kr2"</string>
    <string name="url_scbi">"https://1fichier.com/?fqjslgdncj"</string>
    <string name="network_fail">Ошибка загрузки. Проверьте подключение к сети и попробуйте снова.</string>
    <string name="of">из</string>
    <string name="room">ауд.</string>
    <string name="image_saved">Изображение успешно сохранено на диск.</string>
    <string name="hint_email">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_login">Войти</string>
    <string name="hint_register">Зарегистрироваться</string>

    <string name="right_now">Только что</string>
    <string name="minutes_default">минут</string>
    <string name="minutes_one">минута</string>
    <string name="minutes_two_to_four">минуты</string>
    <string name="hours_default">часов</string>
    <string name="hours_one">час</string>
    <string name="hours_two_to_four">часа</string>
    <string name="days_default">дней</string>
    <string name="days_one">день</string>
    <string name="days_two_to_four">дня</string>
    <string name="weeks_default">недель</string>
    <string name="weeks_one">неделю</string>
    <string name="weeks_two_to_four">недели</string>
    <string name="months_default">месяцев</string>
    <string name="months_one">месяц</string>
    <string name="months_two_to_four">месяца</string>
    <string name="years_default">лет</string>
    <string name="years_one">год</string>
    <string name="years_two_to_four">года</string>
    <string name="ago">назад</string>
</resources>
