<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkTransparent">
    <ImageView
        android:id="@+id/logo"
        android:layout_height="128dp"
        android:layout_width="128dp"
        android:layout_gravity="center"

        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"

        android:src="@drawable/ic_launcher"
        android:background="@null"/>

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/quadruple_margin"
        android:layout_marginLeft="@dimen/quadruple_margin"
        android:layout_marginRight="@dimen/quadruple_margin"
        android:layout_height="wrap_content"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:shadowColor="@color/colorPrimaryDark"
        android:textCursorDrawable="@color/colorPrimaryDarkTransparent"

        android:hint="@string/hint_email"/>
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/double_margin"
        android:layout_marginLeft="@dimen/quadruple_margin"
        android:layout_marginRight="@dimen/quadruple_margin"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textCursorDrawable="@color/colorPrimaryDarkTransparent"
        android:inputType="textPassword"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/quadruple_margin"
        android:layout_marginLeft="@dimen/quadruple_margin"
        android:layout_marginRight="@dimen/quadruple_margin"
        android:text="@string/hint_login"
        android:textColor="@color/colorTabsScroll"
        android:background="@color/colorTransparentBackground"
        android:textAllCaps="false"/>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/quadruple_margin"
        android:layout_marginLeft="@dimen/quadruple_margin"
        android:layout_marginRight="@dimen/quadruple_margin"
        android:text="@string/hint_register"
        android:background="@color/colorTransparentBackground"
        android:textColor="@color/colorTabsScroll"
        android:textAllCaps="false"/>
</LinearLayout>