<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".view.activity.MainActivity">
    <include
        android:id="@+id/action_bar"
        layout="@layout/view_actionbar"
        ></include>
        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </FrameLayout>

</LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:background="#F8F7F7F7"
        android:theme="@style/TransparentActionBar"
        android:weightSum="1"
        android:visibility="gone">


        <ImageButton
            android:id="@+id/closeNavBarButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingLeft="19dp"
            android:paddingTop="17dp"
            android:layout_weight="0"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"

            android:src="@drawable/ic_nav_quit"
            android:background="@null"/>




        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:theme="@style/TransparentActionBar">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/navbar_news"
                    android:paddingLeft="@dimen/drawer_margin"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorTextNavBar"
                    android:layout_gravity="center"
                    android:id="@+id/navbar_news" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/navbar_announcements"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorMarkedForRemoval"
                    android:layout_gravity="center"
                    android:paddingLeft="@dimen/drawer_margin"
                    android:id="@+id/navbar_announcements" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/navbar_timetable"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorTextNavBar"
                    android:layout_gravity="center"
                    android:paddingLeft="@dimen/drawer_margin"
                    android:id="@+id/navbar_timetable" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/navbar_studies"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorMarkedForRemoval"
                    android:layout_gravity="center"
                    android:paddingLeft="@dimen/drawer_margin"
                    android:id="@+id/navbar_studies" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/navbar_community"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorTextNavBar"
                    android:layout_gravity="center"
                    android:paddingLeft="@dimen/drawer_margin"
                    android:id="@+id/navbar_community" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/navbar_help"
                    android:paddingLeft="@dimen/drawer_margin"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorTextNavBar"
                    android:layout_gravity="center"
                    android:id="@+id/navbar_help" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/navbar_settings"
                    android:paddingLeft="@dimen/drawer_margin"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorTextNavBar"
                    android:layout_gravity="center"
                    android:id="@+id/navbar_settings" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>